--- a/roles/iptables/handlers/main.yml
+++ b/roles/iptables/handlers/main.yml
@@ -1,9 +1,6 @@
 ---
 # handlers file for iptables
-- name: restore iptables
-  shell: yes | iptables-apply 
-
-- name: restart netfilter-persisten
+- name: restart netfilter-persistent
   ansible.builtin.service:
-    name: netfilter-persisten
+    name: netfilter-persistent
     state: restarted
