--- a/roles/iptables/templates/iptables.conf
+++ b/roles/iptables/templates/iptables.conf
@@ -3,10 +3,8 @@
 :INPUT DROP [9:364]
 :FORWARD ACCEPT [0:0]
 :OUTPUT ACCEPT [0:0]
-#allows remote host to make connections with you 
--A INPUT -p tcp -m tcp --dport 22 -j ACCEPT {% if iptables.input_ports %}{% for port in iptables.input_ports %}
--A INPUT -p tcp -m tcp --dport {{port}} -j ACCEPT {% endfor %} {% endif %}
-#allows you to make connections with remote host 
--A OUTPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT{% if iptables.output_ports %} {% for port in iptables.output_ports %}
--A OUTPUT -p tcp -m tcp --sport {{port}} -m state --state ESTABLISHED -j ACCEPT{% endfor %} {% endif %}
-COMMIT
+-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
+{% if iptables.input_ports %}{% for port in iptables.input_ports %}-A INPUT -p tcp -m tcp --dport {{port}} -j ACCEPT
+{% endfor %}{% endif %}-A OUTPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
+{% if iptables.output_ports %}{% for port in iptables.output_ports %}-A OUTPUT -p tcp -m tcp --sport {{port}} -m state --state ESTABLISHED -j ACCEPT 
+{% endfor %}{% endif %}COMMIT
