--- a/roles/nginx/templates/nginx.conf
+++ b/roles/nginx/templates/nginx.conf
@@ -29,8 +29,8 @@ http {
 server {
     listen 80;
     #listen 443 ssl;
-    server_name {{nginx.domain}} www.{{nginx.domain}} 83.222.9.88;
-    root {{nginx.site_root}};
+    server_name {{nginx.domain}} www.{{nginx.domain}};
+    root {{site_root}}/public;
 
     # ssl_certificate     /nginx/crt/;
     # ssl_certificate_key /nginx/crt/;
