--- a/roles/php/defaults/main.yml
+++ b/roles/php/defaults/main.yml
@@ -4,4 +4,7 @@ php:
   listen_path: /run/php/php-fpm.sock
   memory_limit: 256M
   install_composer: False
+  install_laravel: False
+
 php_version: latest
+laravel_version: latest
