--- a/roles/mysql_server/handlers/main.yml
+++ b/roles/mysql_server/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for mysql_server
+- name: start mysql service 
+  ansible.builtin.systemd_service:
+    state: started
+    name: mysql.service
+    enabled: True 
