add nginx server_name

--- a/roles/nginx/templates/nginx.conf
+++ b/roles/nginx/templates/nginx.conf
@@ -25,7 +25,13 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-    
+
+   server {
+    listen       80;
+    server_name _;
+    return 403;
+}
+
 server {
     listen 80;
     #listen 443 ssl;
